--- a/responsive.css
+++ b/responsive.css
@@ -73,6 +73,12 @@
     }
 }
 
+@media (max-width:590px) {
+    .header-right ul li a {
+        padding: 0px 14px;
+        font-size: 18px;
+    }
+}
 @media (max-width:520px) {
     .header-right ul li a {
         padding: 0px 10px;
