--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,6 @@
 @media (max-width:1520px) {
     .fixed-with {
-        width: 100%;
+        width: 1235px;
         max-width: 100%;
         margin: auto;
     }
@@ -33,6 +33,10 @@
         float: right;
         width: 100%;
     }
+    .service-item {
+        width: 100%;
+       
+    }
     .blog-item {
         padding: 20px;
     }
@@ -40,6 +44,8 @@
         text-align: center;
     }
 }
+
+
 @media (max-width:690px) {
     .header-right ul li a {
         
@@ -226,6 +232,9 @@
        
         margin-left: 10px;
     }
+    .footer-left p {
+        font-size: 12px;
+    }
 }
 @media (max-width:300px) {
     .header-right ul li a {
@@ -254,6 +263,9 @@
         margin: 20px 0;
         font-size: 22px;
     }
+    .footer-left p {
+        font-size: 12px;
+    }
 }
 @media (max-width:270px) {
     .header-right ul li a {
@@ -281,5 +293,8 @@
     .service-item h3 {
         margin: 20px 0;
         font-size: 22px;
+    }
+    .footer-left p {
+        font-size: 12px;
     }
 }
